--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
 .App {
   text-align: center;
+  background-color: aqua;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calculator {
+  margin: 0 auto;
+  padding: 0 auto;
+  width: 400px;
+  height: 550px;
+  border: 6px solid blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.display {
+  width: 100%;
+  height: 60px;
+  background-color: bisque;
+  text-align: right;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttons {
+  width: 100%;
+  height: 490px;
+  background-color: yellowgreen;
 }
 
-.App-link {
-  color: #61dafb;
+
+button {
+  width: 102px;
+  height: 90px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#clear {
+  float: left;
+  width: 196px;
+}
+
+#divide {
+  float: left;
+}
+
+#multiply {
+  float: right;
+}
+
+#subtract {
+  float: right;
+}
+
+#add {
+  float: right;
+  position: absolute;
+  top: 255px;
+}
+
+#equals {
+  float: right;
+  height: 196px;
+  position: relative;
+  top: 178px;
+  right: -102px;
 }
