--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   padding: 0 auto;
   width: 400px;
   height: 550px;
-  border: 6px solid blue;
 }
 
 .display {
@@ -23,8 +22,20 @@
   width: 100%;
   height: 490px;
   background-color: yellowgreen;
+  display: grid;
+  /* grid: repeat(100px); */
+  display: flex;
+  position: relative;
 }
 
+.number-buttons {
+  background-color: aliceblue;
+  float: left;
+  padding: 0 0;
+  margin: 0 0;
+  height: 490px;
+  position: relative;
+}
 
 button {
   width: 102px;
@@ -49,15 +60,41 @@ button {
 }
 
 #add {
-  float: right;
-  position: absolute;
-  top: 255px;
+  position: relative;
+  top: 89px;
+  right: -251px;
+
 }
 
 #equals {
+  position: relative;
   float: right;
   height: 196px;
-  position: relative;
   top: 178px;
   right: -102px;
+}
+
+#decimal {
+  position: relative;
+  right: -150px;
+  top: 104px;
+}
+
+#zero {
+  width: 196px;
+  position: relative;
+  right: 0px;
+  top: 194px;
+}
+
+.numeric {
+  position: relative;
+  top: -270px;
+  right: 50px;
+
+}
+
+.numeric > button {
+  width: 105px;
+  height: 95px;
 }
